# Bloch-Equations-Modelling-Project

./: bloch_converted.py  experiment_numerical.py  pyproject.toml  train.py
blochsim/: __init__.py  simulator.py
blochsim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
checkpoints/: best.pt
data/: datasets.py  make_datasets.py  test_datasets.py
data/npz/: meta.json
models/: neural_ode1.py  neural_ode_rk4_fast.py
npz/: meta.json
tests/: blochsim_tester.py  blochsim_tester_3D.py  blochsim_tester_3D_2.py  numerical_tester.py
training/: loop.py
