[project]
name = "blochsim"
version = "0.1.0"
description = "Bloch equation simulator for neural ODE experiments"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# opt in to package discovery config
packages = { find = { include = ["blochsim*"], exclude = ["Images*", "BlochSim*", "data*", "models*", "notebooks*", "tests*"] } }
